[project]
name = "example_package_HongKiBum"
version = "0.0.1"
authors = [
  { name="HongKiBum", email="hgb9720@hanyang.ac.kr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HongKiBum/pypi"
Issues = "https://github.com/HongKiBum/pypi/issues"
